Fixed Overflow

--- a/ccgs-assistant/styles/schoolinfo.module.css
+++ b/ccgs-assistant/styles/schoolinfo.module.css
@@ -6,7 +6,7 @@
 .docLinks {
     width: 100%;
     display: table;
-    margin: 0;
+    margin: 0px 0px 50px;
 }
 
 .docLink {
